test/domains/sungeun/sparse/exterior.good
exterior.chpl:3: In function 'my_exterior':
exterior.chpl:4: error: exterior not supported on sparse domains
exterior.chpl:10: Function 'my_exterior' instantiated as: my_exterior(D: DefaultSparseDom(1,int(64),domain(1,int(64),false)), off: int(64))
